# plasma

./: .gitignore  LICENSE  README.md  pyproject.toml
plsma/: __init__.py  cli.py  utils.py
plsma/commands/: __init__.py  base.py  help.py  registry.py
plsma/commands/env/: __init__.py  path.py  shell.py  vars.py
plsma/commands/file/: __init__.py  backup.py  size.py
plsma/commands/git/: __init__.py  status.py  sync.py  undo.py
plsma/commands/ip/: __init__.py  list.py  ping.py  port.py  subnet.py  validate.py
plsma/commands/project/: __init__.py  license.py
plsma/commands/project/licenses/: __init__.py  apache.py  gpl.py  mit.py  unlicense.py
plsma/commands/server/: __init__.py  find.py  kill.py  ports.py
