[project]
name = "plsma"
version = "0.1.1"
description = "A developer's toolkit for managing and automating development tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "psutil>=7.0.0",
    "rich>=14.0.0",
]

[project.scripts]
plasma = "plsma.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plsma"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "PL",    # pylint
    "ICN",   # Import conventions
    "N",     # PEP 8 naming conventions
    "RUF",   # Ruff specific rules
    "TC",    # flake8-type-checking
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
